--- a/src/personalized_menu_viewer.html
+++ b/src/personalized_menu_viewer.html
@@ -9,34 +9,32 @@
 </head>
 
 <body>
-
   <nav class="navbar fixed-top navbar-expand-lg bg-primary" data-bs-theme="dark">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="#">Choose Well</a>
+        <a class="navbar-brand" href="../index.html">Choose Well</a>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="src/dietary_profile_editor.html">Dietary Profile Editor</a>
+            <a class="nav-link" href="dietary_profile_editor.html">Dietary Profile Editor</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="src/personalized_menu_viewer.html">Personalized Menu Viewer</a>
+            <a class="nav-link active" aria-current="page" href="personalized_menu_viewer.html">Personalized Menu Viewer</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="src/restaurant_menu_creator.html">Restaurant Menu Creator</a>
-          </li>
+            <a class="nav-link" href="restaurant_menu_creator.html">Restaurant Menu Creator</a>
+          </li> 
         </ul>
       </div>
     </div>
   </nav>
 
   <p class="mt-4">margin-top</p>
-  <h1>Choose Well - a dietary profile and personalized menu viewer application</h1>
+  <h1>Personalized menu viewer</h1>
 </body>
-
 </html>
