--- a/src/dietary_profile_editor.html
+++ b/src/dietary_profile_editor.html
@@ -16,7 +16,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <a class="navbar-brand" href="../index.html">Choose Well</a>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav navbar-nav mx-auto">
           <li class="nav-item">
             <a class="nav-link" href="../index.html">Home</a>
           </li>
